<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:paddingLeft="20dp"
          android:paddingBottom="30dp"
          android:paddingRight="20dp">

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="150dp"
              android:layout_gravity="center"
              android:layout_marginTop="40dp"
              android:src="@drawable/logo" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/purple_background"
              android:gravity="center"
              android:text="@string/SignUp"
              android:textColor="@color/white"
              android:textSize="20sp"
              android:textStyle="bold" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="30dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_person_black" />

              <EditText
                  android:id="@+id/signup_firstname"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:gravity="start"
                  android:hint="@string/firstName"
                  android:inputType="text"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAlignment="viewStart"
                  android:textColor="@color/black"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="15dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_person_black" />

              <EditText
                  android:id="@+id/signup_lastname"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:gravity="start"
                  android:hint="@string/lastName"
                  android:inputType="text"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAlignment="viewStart"
                  android:textColor="@color/black"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />

          </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="15dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_phone_black_24dp" />

              <EditText
                  android:id="@+id/signup_phonenumber"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:gravity="start"
                  android:hint="@string/PhoneNumber"
                  android:inputType="text"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAlignment="viewStart"
                  android:textColor="@color/black"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="15dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_add_location_black" />

              <EditText
                  android:id="@+id/signup_fulladdress"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:gravity="start"
                  android:hint="@string/FullAddress"
                  android:inputType="text"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAlignment="viewStart"
                  android:textColor="@color/black"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="15dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_add_location_black" />

              <Spinner
                  android:id="@+id/region"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_marginTop="15dp"
              android:background="@drawable/edittext_background"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:src="@drawable/ic_lock_black" />

              <EditText
                  android:id="@+id/login_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:gravity="start"
                  android:hint="@string/password"
                  android:inputType="textPassword"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textAlignment="viewStart"
                  android:textColor="@color/black"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="20dp"
              android:gravity="bottom">

              <Button
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:background="@drawable/purple_background"
                  android:text="@string/SignUp"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:textStyle="bold" />
          </LinearLayout>


      </LinearLayout>

    </ScrollView>

</LinearLayout>